--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
         canvas { 
             display: block;
         }
+        #crosshair {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 24px;
+            pointer-events: none;
+            user-select: none;
+            z-index: 1000;
+            text-shadow: 
+                -1px -1px 0 #000,  
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
+        }
     </style>
 </head>
 <body>
+    <div id="crosshair">+</div>
     <script type="importmap">
         {
             "imports": {
