--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%) translateZ(2px);
             color: rgba(255, 255, 255, 0.8);
             font-size: 24px;
             pointer-events: none;
@@ -24,6 +24,8 @@
                 1px -1px 0 #000,
                 -1px 1px 0 #000,
                 1px 1px 0 #000;
+            transform-style: preserve-3d;
+            perspective: 1000px;
         }
     </style>
 </head>
